# jsonpiler

./: .gitattributes  .gitignore  CHANGELOG-ja.md  CHANGELOG.md  Cargo.toml  README-ja.md  README.md  copy.rs  input  input.json  input.s  rustfmt.toml  t.s  tempCodeRunnerFile.ps1  x.s
.gemini/: styleguide.md
doc/: src-files.js
doc/jsompiler/: index.html
doc/jsompiler/definition/: index.html  struct.JParser.html  struct.Json.html  type.JResult.html
doc/jsompiler/utility/: fn.dummy.html  fn.error_exit.html  fn.format_err.html  index.html  sidebar-items.js
doc/search.desc/jsompiler/: jsompiler-desc-0-.js
doc/src/jsompiler/: definition.rs.html  utility.rs.html
docs/: commands.md  functions.md  jspl-ja.md  jspl.md  specification-ja.md  specification.md  types-ja.md  types.md
docs/functions/: README.md  arithmetic.md  compare.md  compound.md  control.md  evaluate.md  gui.md  io.md  logic.md  logical.md  output.md  string.md  variable.md
error_cases/: zero_division.jspl
examples/: README.md  arithmetic.json  counter.json  fib.json  message_box.json  or_and_nand.json  scope.json  square.json  square_global.json  utf8_check.json
examples/json/: README.md  arithmetic.json  counter.json  fib.json  or_and_nand.json  square.json
examples/jspl/: README.md  arithmetic.jspl  bulls_and_cows.jspl  counter.jspl  fib.jspl  global_and_local.jspl  gui_julia_mouse.jspl  gui_mandelbrot_zoom.jspl  gui_mandelbrot_zoom_multi.jspl  gui_mandelbrot_zoom_scroll.jspl  hello.jspl  import_and_assert.jspl  include_and_assert.jspl  int_sqrt.jspl  is_prime.jspl  julia.jspl  lcm.jspl  length.jspl  mandelbrot.jspl  or_and_nand.jspl  or_nand_xor.jspl  ping_pong.jspl  print_int.jspl  random.jspl  square.jspl
extension/: .vscodeignore  CHANGELOG.md  README.md  language-configuration.json  package.json
extension/snippets/: jspl.code-snippets
extension/src/: extension.js  extension.ts
extension/syntaxes/: jspl.tmLanguage.json
jsplsyntax/: README.md  language-configuration.json  package.json
jsplsyntax/jsplsyntax-0.0.4/: [Content_Types].xml  extension.vsixmanifest
jsplsyntax/syntaxes/: jspl.tmLanguage.json
src/: assembler.rs  bind.rs  bss.s  builtin.rs  command_line.rs  compile_context.rs  compiler.rs  consts.rs  core.rs  data.s  definition.rs  dependency.rs  err_msg.rs  func_info.rs  functions.rs  impl_compiler.rs  impl_json.rs  impl_jvalue.rs  impl_object.rs  impl_parser.rs  impl_value.rs  internal.rs  intrinsic.rs  json.rs  label.rs  lib.rs  macros.rs  main.rs  message.s  name.rs  object.rs  other.rs  parser.rs  portable_executable.rs  prelude.rs  scope.rs  scope_info.rs  server.rs  start.s  tempCodeRunnerFile.rs  (+4 more)
src/asm/: bss.s  data.s  message.s  start.s  text.s
src/assembler/: disp.rs  encode.rs  inst.rs  ops.rs  pe.rs  register.rs  rm.rs  sect_header.rs  section.rs  sizeof.rs  utility.rs
src/builtin/: arithmetic.rs  compare.rs  compound.rs  construct.rs  control.rs  define.rs  evaluate.rs  file.rs  gui.rs  internal.rs  io.rs  logic.rs  logical.rs  output.rs  string.rs  variable.rs
src/compiler/: arithmetic.rs  compare.rs  compound.rs  control.rs  define.rs  evaluate.rs  evaluator.rs  gui.rs  intrinsic.rs  io.rs  logic.rs  module.rs  string.rs  variable.rs
src/core/: impl_compiler.rs  impl_parser.rs  utility.rs
src/definition/: impl_compiler.rs  impl_jparser.rs  impl_json.rs  impl_jvalue.rs  impl_parser.rs
src/internal/: handler.rs  input.rs  misc.rs  print_n.rs  random.rs  str_utility.rs  wnd_proc.rs
src/intrinsic/: copy_str.rs  err_handler.rs  input.rs  print_n.rs  random.rs  wnd_proc.rs
src/parser/: err_msg.rs  error.rs  format_block.rs  formatter.rs  jspl.rs  parse_json.rs  parse_jspl.rs  position.rs  utility.rs
src/server/: method.rs  sync.rs  time_stamp.rs  utility.rs
src/txt/: SEH_HANDLER_MSG.txt
src/utility/: consts.rs  data_lbl.rs  drop.rs  json.rs  macros.rs  memory.rs  move_json.rs  other.rs  scope.rs  var_table.rs
tests/: test.rs
(+31 files in other folders)
