[package]
name = "jsonpiler"
version = "0.2.1"
edition = "2024"
description = "a Json syntax programming language for Windows"
documentation = "https://hal-g1thub.github.io/jsonpiler-doc/jsonpiler/index.html"
license = "Apache-2.0"
repository = "https://github.com/HAL-G1THub/jsonpiler.git"
categories = ["compilers"]
keywords = ["json", "parser", "compiler", "cli"]
[[bin]]
name = "jsonpiler"
path = "src/main.rs"
[profile.release]
panic = "abort"
[badges]
maintenance = { status = "actively-developed" }
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
implicit_return = "allow"
unseparated-literal-suffix = "allow"
question_mark_used = "allow"
pattern_type_mismatch = "allow"
pub-with-shorthand = "allow"
blanket_clippy_restriction_lints = "allow"
multiple_inherent_impl = "allow"
single_char_lifetime_names = "allow"
integer_division_remainder_used = "allow"
wildcard_enum_match_arm = "allow"
