[package]
name = "jsonpiler"
version = "0.4.2"
edition = "2024"
description = "a Json syntax programming language for Windows"
license = "Apache-2.0"
repository = "https://github.com/HAL-G1THub/jsonpiler.git"
categories = ["compilers"]
keywords = ["json", "parser", "compiler", "cli"]
[[bin]]
name = "jsonpiler"
path = "src/main.rs"
[profile.release]
panic = "abort"
[badges]
maintenance = { status = "actively-developed" }
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
all = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
implicit_return = "allow"
unseparated-literal-suffix = "allow"
question_mark_used = "allow"
pattern_type_mismatch = "allow"
pub-with-shorthand = "allow"
blanket_clippy_restriction_lints = "allow"
multiple_inherent_impl = "allow"
single_char_lifetime_names = "allow"
integer_division_remainder_used = "allow"
std_instead_of_alloc = "allow"
little_endian_bytes = "allow"
indexing_slicing = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
arithmetic_side_effects = "allow"
map_err_ignore = "allow"
self_named_module_files = "allow"
undocumented_unsafe_blocks = "allow"
let-underscore_must_use = "allow"
allow_attributes_without_reason = "allow"
